# ProgrammableDigitalWeaves

./: CMakeLists.txt  LICENSE  README.md  build.sh
Projects/: CMakeLists.txt
Projects/ProgrammableDigitalWeaves/: CMakeLists.txt  DrawPattern.py
Projects/ProgrammableDigitalWeaves/GCode/: Actuation.gcode  CircleFused.gcode  CircleSliding.gcode  FusedGrid.gcode  SlidingGrid.gcode  Type1.gcode  Type2.gcode  Type3.gcode  Type4.gcode
Projects/ProgrammableDigitalWeaves/include/: EoLRodSim.h  GCodeGenerator.h  Homogenization.h  HybridC2Curve.h  IO.h  RestState.h  Rod.h  UI.h  UnitPatch.h  Util.h  VecMatDef.h
Projects/ProgrammableDigitalWeaves/src/: BendingAndTwisting.cpp  DerivativeTest.cpp  Elasticity.cpp  EoLRodSim.cpp  GCodeGenerator.cpp  Homogenization.cpp  HybridC2Curve.cpp  Joint.cpp  PBCBendingAndTwisting.cpp  ParallelContact.cpp  PeriodicBC.cpp  Regularizer.cpp  RestState.cpp  Rod.cpp  Scene.cpp  Stretching.cpp  UI.cpp  UnitPatch.cpp  Visualization.cpp  main.cpp
